css/styles.css
body {
	background-color: rgb(225, 230, 240);

}

h1 {
	padding: 10%;
	text-align: center;
	font-weight: bolder;
}

h2 {
	text-align: center;
}
h5 {
	font-style: italic;
}
.active {
	font-weight: 900;
	text-transform: uppercase;
	color: black;
	background-color: rgba(230, 230, 230, 0.9);
}
aside {
	text-align: center;
}
.language-toggle {
	position: absolute;
	right: 5px;
}

section {
	border: 3px solid gray;
	border-radius: 25px;
	padding-left: 15px;
	padding-right: 15px;
	margin-bottom: 25px;
	background-color: white;
}
header {
	/*border: 2px solid black;*/
	background-color: rgb(245, 245, 200);

}

@media all and (min-width: 1244px){
	header{
		background-image: 
		linear-gradient(rgba(255, 255, 255, 0.5),
    					rgba(255, 255, 255, 0.5)), 
    	url('../img/Dresden.jpg');
    }
}
footer {
	background-color: rgba(230, 230, 230, 0.9);
	text-align: center;
	position: fixed;
	bottom: 0;
}
aside {
	padding-left: 50px;
}
img {
	margin: 0em auto 2em auto;
	border: 3px solid gray;
}
.book-title {
	font-style: italic;
}
.navbar-nav {
	float: none;
	margin: 0 auto;
	background-color: rgba(230, 230, 230, 0.9); 
}
ul {
	margin: 0 auto;
}

